fix merge error

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -69,11 +69,7 @@ gcode:
   G28
   G1 Z295
 
-[gcode_macro CANCEL_PRINT]
-description: Cancel the actual running print
-rename_existing: CANCEL_PRINT_BASE
-gcode:
-  PRINT_END
+
   
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
@@ -233,8 +229,13 @@ command: rm -rf /home/pi/magnetox-os-update
 timeout: 2.
 verbose: True
 
-[gcode_shell_command GIT_CLONE]
+[gcode_shell_command GIT_CLONE_DEV]
 command: git clone -b dev https://github.com/mypeopoly/magnetox-os-update /home/pi/magnetox-os-update
+timeout: 150.
+verbose: True
+
+[gcode_shell_command GIT_CLONE]
+command: git clone -b main https://github.com/mypeopoly/magnetox-os-update /home/pi/magnetox-os-update
 timeout: 150.
 verbose: True
 
@@ -248,13 +249,18 @@ command: sh /home/pi/magnetox-os-update/update.sh
 timeout: 600.
 verbose: True
 
+[gcode_macro _UPDATE_OS_DEV]
+gcode:
+  RUN_SHELL_COMMAND CMD=RM_UPDATE
+  RUN_SHELL_COMMAND CMD=GIT_CLONE_DEV
+  RUN_SHELL_COMMAND CMD=UPDATE_OS_CMD
+
+
 [gcode_macro _UPDATE_OS]
 gcode:
   RUN_SHELL_COMMAND CMD=RM_UPDATE
   RUN_SHELL_COMMAND CMD=GIT_CLONE
-  RUN_SHELL_COMMAND CMD=CHMOD_E
   RUN_SHELL_COMMAND CMD=UPDATE_OS_CMD
-
 
 [gcode_shell_command  MOTOR_CONTROL]
 command: curl -G http://127.0.0.1:8880/motor_control
