:zap: update macros.cfg and update.sh

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -5,7 +5,7 @@ gcode:
     G28 Z
   {% endif %}
   M118 Heating the bed, please wait...
-  M190 S70
+  M190 S50
   M118 Complete heating and start executing bed mesh calibrate
   BED_MESH_CALIBRATE_BASE
   G28 Z
@@ -15,7 +15,7 @@ rename_existing: QUAD_GANTRY_LEVEL_BASE
 gcode:
   G28
   M118 Heating the bed, please wait...
-  M190 S70
+  M190 S50
   M118 Complete heating and start executing quad gantry level
   QUAD_GANTRY_LEVEL_BASE
   G28 Z
@@ -36,7 +36,7 @@ gcode:
 
 [gcode_macro TUNE_EXTRUDER_PID]
 gcode:
-  PID_CALIBRATE HEATER=extruder TARGET=190
+  PID_CALIBRATE HEATER=extruder TARGET=230
 
 [gcode_macro SET_XYZ_POSITION]
 gcode:
@@ -253,6 +253,7 @@ verbose: True
 gcode:
   RUN_SHELL_COMMAND CMD=RM_UPDATE
   RUN_SHELL_COMMAND CMD=GIT_CLONE_DEV
+  RUN_SHELL_COMMAND CMD=CHMOD_E
   RUN_SHELL_COMMAND CMD=UPDATE_OS_CMD
 
 
@@ -260,6 +261,7 @@ gcode:
 gcode:
   RUN_SHELL_COMMAND CMD=RM_UPDATE
   RUN_SHELL_COMMAND CMD=GIT_CLONE
+  RUN_SHELL_COMMAND CMD=CHMOD_E
   RUN_SHELL_COMMAND CMD=UPDATE_OS_CMD
 
 [gcode_shell_command  MOTOR_CONTROL]
@@ -389,6 +391,22 @@ gcode:
     {% for i in range(iterations) %}
         G0 X100 Y50 F{speed*60}
         G0 X100 Y350 F{speed*60}
+    {% endfor %}
+
+[gcode_macro TEST_XY_MOVE]
+gcode:
+    # Speed
+    {% set speed  = params.SPEED|default(400)|int %}
+    # Iterations
+    {% set iterations = params.ITERATIONS|default(5)|int %}
+    # Acceleration
+    {% set accel  = params.ACCEL|default(printer.configfile.settings.printer.max_accel)|int %}
+    SET_VELOCITY_LIMIT VELOCITY={speed} ACCEL={accel} ACCEL_TO_DECEL={accel / 2}
+    G28
+    G1 Z20 F300
+    {% for i in range(iterations) %}
+        G0 X10 Y10 F{speed*60}
+        G0 X250 Y350 F{speed*60}
     {% endfor %}
 
 [gcode_macro TEST_Z_MOVE]
