:zap: add CLEAR_PAUSE

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -82,6 +82,7 @@ gcode:
     {% set velocity = printer.configfile.settings.pause_resume.recover_velocity %}
     {% set sp_move        = velocity if not macro_found else client.speed_move|default(velocity) %}
     ##### end of definitions #####
+    M118 Resume printing....heating nozzle, please wait a moment
     M109 S{last_extruder_temp}
     M106 S{last_fan_speed*255|int}
     SET_FAN_SPEED FAN=Jetstream SPEED={last_jetstream_speed}
@@ -98,6 +99,7 @@ gcode:
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
 gcode:
+    CLEAR_PAUSE
     {% if printer['pause_resume'].is_paused|int == 0 %}
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=last_extruder_temp VALUE={printer[printer.toolhead.extruder].target} 
         SET_GCODE_VARIABLE MACRO=RESUME VARIABLE=last_fan_speed VALUE={printer["fan"].speed}   
